--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       python: 3.12
     commands:
      - echo "Installing dependencies..."
-     - pip Install -r requirements.txt -t lib
+     - pip install -r requirements.txt -t lib
 
   build:
     commands:
